--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -1,48 +1,48 @@
-planet.ol-omaloon.name = \u041E\u043C\u0430\u043B\u0443\u043D
-planet.ol-omaloon.description = \u041F\u043B\u0430\u043D\u0435\u0442\u0430 \u0432 \u0456\u043D\u0448\u0456\u0439 \u0437\u043E\u0440\u044F\u043D\u0456\u0439 \u0441\u0438\u0441\u0442\u0435\u043C\u0456. \u0425\u043E\u043B\u043E\u0434\u043D\u0430 \u0437\u0456\u0440\u043A\u0430 \u043D\u0435 \u0434\u0430\u0454 \u0457\u0439 \u0434\u043E\u0441\u0442\u0430\u0442\u043D\u044C\u043E \u0442\u0435\u043F\u043B\u0430, \u0442\u043E\u043C\u0443 \u043D\u0430 \u043F\u043E\u0432\u0435\u0440\u0445\u043D\u0456 \u043F\u043B\u0430\u043D\u0435\u0442\u0438 \u043F\u0430\u043D\u0443\u0454 \u0432\u0456\u0447\u043D\u0430 \u0437\u0438\u043C\u0430.
-planet.ol-omaloon.details = [orange]\u041D\u0430\u0439\u043A\u0440\u0430\u0449\u0430 \u043F\u043B\u0430\u043D\u0435\u0442\u0430 \u0437 \u0443\u0441\u0456\u0445.
+planet.ol-omaloon.name = Омалун
+planet.ol-omaloon.description = Планета в іншій зоряній системі. Холодна зірка не дає їй достатньо тепла, тому на поверхні планети панує вічна зима.
+planet.ol-omaloon.details = [orange]Найкраща планета з усіх.
 
-planet.ol-amsha.name = \u0410\u043C\u0448\u0430
-planet.ol-amsha.description = \u0417\u0456\u0440\u043A\u0430 \u043B\u0438\u0448\u0435 \u0437 \u043E\u0434\u043D\u043E\u044E \u043F\u043B\u0430\u043D\u0435\u0442\u043E\u044E.
+planet.ol-amsha.name = Амша
+planet.ol-amsha.description = Зірка лише з одною планетою.
 
-planet.ol-set.name = \u0421\u0435\u0442
-planet.ol-set.description = \u041F\u0440\u0438\u0440\u043E\u0434\u043D\u0438\u0439 \u0441\u0443\u043F\u0443\u0442\u043D\u0438\u043A \u041E\u043C\u0430\u043B\u0443\u043D\u0443
+planet.ol-set.name = Сет
+planet.ol-set.description = Природний супутник Омалуну.
 
 # region Items
 
-item.ol-omalite.name = \u041E\u043C\u0430\u043B\u0456\u0442
-item.ol-omalite.description = \u0425\u043E\u043B\u043E\u0434\u043D\u0438\u0439 \u0456 \u0437\u043B\u0435\u0433\u043A\u0430 \u0440\u0430\u0434\u0456\u043E\u0430\u043A\u0442\u0438\u0432\u043D\u0438\u0439 \u043A\u0430\u043C\u0456\u043D\u044C. \u0412\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0454\u0442\u044C\u0441\u044F \u0432 \u0435\u043D\u0435\u0440\u0433\u0435\u0442\u0438\u0446\u0456 \u0442\u0430 \u0431\u043E\u0454\u043F\u0440\u0438\u043F\u0430\u0441\u0430\u0445.
+item.ol-omalite.name = Омаліт
+item.ol-omalite.description = Холодний і злегка радіоактивний камінь. Використовується в енергетиці та боєприпасах.
 
-item.ol-omalite-alloy.name = \u041E\u043C\u0430\u043B\u0456\u0442\u043E\u0432\u0438\u0439 \u0441\u043F\u043B\u0430\u0432
-item.ol-omalite-alloy.description = \u0425\u043E\u043B\u043E\u0434\u043D\u0438\u0439 \u0456 \u0441\u043B\u0430\u0431\u043E\u0440\u0430\u0434\u0456\u043E\u0430\u043A\u0442\u0438\u0432\u043D\u0438\u0439 \u0441\u043F\u043B\u0430\u0432. \u0412\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0454\u0442\u044C\u0441\u044F \u044F\u043A \u0431\u043E\u0454\u043F\u0440\u0438\u043F\u0430\u0441\u0438 \u0456 \u044F\u043A \u043C\u0430\u0442\u0435\u0440\u0456\u0430\u043B \u0434\u043B\u044F \u0431\u0443\u0434\u0456\u0432\u0435\u043B\u044C.
+item.ol-omalite-alloy.name = Омалітовий сплав
+item.ol-omalite-alloy.description = Холодний і слаборадіоактивний сплав. Використовується як боєприпаси і матеріал для будівель.
 
 ###Liquids
 
-liquid.ol-liquid-omalite.name = \u041E\u043C\u0430\u043B\u0456\u0442\u043E\u0432\u0430 \u0440\u0456\u0434\u0438\u043D\u0430
-liquid.ol-liquid-omalite.description = \u041D\u0430\u0434\u0437\u0432\u0438\u0447\u0430\u0439\u043D\u043E \u0445\u043E\u043B\u043E\u0434\u043D\u0430 \u0440\u0456\u0434\u0438\u043D\u0430, \u0449\u043E \u0432\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0454\u0442\u044C\u0441\u044F \u0434\u043B\u044F \u043E\u0445\u043E\u043B\u043E\u0434\u0436\u0435\u043D\u043D\u044F \u0431\u0456\u043B\u044C\u0448 \u043F\u043E\u0442\u0443\u0436\u043D\u0438\u0445 \u0440\u0435\u0430\u043A\u0442\u043E\u0440\u0456\u0432 \u0456 \u0434\u0435\u044F\u043A\u0438\u0445 \u0437\u0430\u0432\u043E\u0434\u0456\u0432.
+liquid.ol-liquid-omalite.name = Омалітова рідина
+liquid.ol-liquid-omalite.description = Надзвичайно холодна рідина, що використовується для охолодження більш потужних реакторів і деяких заводів.
 
-###Blokcs
+###Blocks
 
-block.ol-omalite-alloy-wall.name = \u0421\u043F\u043B\u0430\u0432\u043E\u0432\u0430 \u0441\u0442\u0456\u043D\u0430
-block.ol-omalite-alloy-wall.description = \u0417\u0430\u0445\u0438\u0449\u0430\u0454 \u0431\u0443\u0434\u0456\u0432\u043B\u0456 \u0432\u0456\u0434 \u0432\u043E\u0440\u043E\u0436\u0438\u0445 \u0441\u043D\u0430\u0440\u044F\u0434\u0456\u0432. \u0414\u0443\u0436\u0435 \u0445\u043E\u043B\u043E\u0434\u043D\u0430, \u0442\u043E\u043C\u0443 \u0431\u043B\u043E\u043A\u0438, \u044F\u043A\u0456 \u0432\u0434\u0430\u0440\u0438\u043B\u0438 \u0457\u0457 \u043B\u0430\u0437\u0435\u0440\u043D\u0438\u043C \u043F\u0440\u043E\u043C\u0435\u043D\u0435\u043C, \u0437\u0430\u043C\u0435\u0440\u0437\u0430\u044E\u0442\u044C. \u041D\u0435 \u0433\u043E\u0440\u0438\u0442\u044C.
+block.ol-omalite-alloy-wall.name = Сплавова стіна
+block.ol-omalite-alloy-wall.description = Захищає союзні будівлі від ворожих снарядів. Дуже холодна, тому блоки, які вдарили її лазерним променем, замерзають. Не горить.
 
-block.ol-omalite-alloy-wall-large.name = \u0412\u0435\u043B\u0438\u043A\u0430 \u0441\u043F\u043B\u0430\u0432\u043E\u0432\u0430 \u0441\u0442\u0456\u043D\u0430
-block.ol-omalite-alloy-wall-large.description = \u0417\u0430\u0445\u0438\u0449\u0430\u0454 \u0431\u0443\u0434\u0456\u0432\u043B\u0456 \u0432\u0456\u0434 \u0432\u043E\u0440\u043E\u0436\u0438\u0445 \u0441\u043D\u0430\u0440\u044F\u0434\u0456\u0432. \u0414\u0443\u0436\u0435 \u0445\u043E\u043B\u043E\u0434\u043D\u0430, \u0442\u043E\u043C\u0443 \u0431\u043B\u043E\u043A\u0438, \u044F\u043A\u0456 \u0432\u0434\u0430\u0440\u0438\u043B\u0438 \u0457\u0457 \u043B\u0430\u0437\u0435\u0440\u043D\u0438\u043C \u043F\u0440\u043E\u043C\u0435\u043D\u0435\u043C, \u0437\u0430\u043C\u0435\u0440\u0437\u0430\u044E\u0442\u044C. \u041D\u0435 \u0433\u043E\u0440\u0438\u0442\u044C.
+block.ol-omalite-alloy-wall-large.name = Велика сплавова стіна
+block.ol-omalite-alloy-wall-large.description = Захищає будівлі від ворожих снарядів. Дуже холодна, тому блоки, які вдарили її лазерним променем, замерзають. Не горить.
 
-block.ol-test-joint.name = \u0422\u0435\u0441\u0442\u043E\u0432\u0438\u0439 \u043F\u043E\u0454\u0434\u043D\u0443\u0432\u0430\u043B\u044C\u043D\u0438\u0439 \u0431\u043B\u043E\u043A
+block.ol-test-joint.name = Тестовий поєднувальний блок
 
-block.ol-low-temperature-smelter.name = \u0421\u043F\u043B\u0430\u0432\u043E\u0432\u0430 \u0446\u0435\u043D\u0442\u0440\u0438\u0444\u0443\u0433\u0430
-block.ol-low-temperature-smelter.description = \u0412\u0438\u0433\u043E\u0442\u043E\u0432\u043B\u044F\u0454 \u043C\u0456\u0446\u043D\u0438\u0439 \u0432 \u0446\u0435\u043D\u0442\u0440\u0438\u0444\u0443\u0437\u0456 \u043E\u043C\u0430\u043B\u0456\u0442\u043E\u0432\u0438\u0439 \u0441\u043F\u043B\u0430\u0432 \u0437 \u043E\u043C\u0430\u043B\u0456\u0442\u0443 \u0442\u0430 \u0442\u0438\u0442\u0430\u043D\u0443. \u041F\u043E\u0442\u0440\u0435\u0431\u0443\u0454 \u043E\u0445\u043E\u043B\u043E\u0434\u0436\u0435\u043D\u043D\u044F. \u0422\u0430\u043A\u043E\u0436 \u0432 \u043F\u0440\u043E\u0446\u0435\u0441\u0456 \u0432\u0438\u0440\u043E\u0431\u043B\u044F\u0454\u0442\u044C\u0441\u044F \u043D\u0435\u0432\u0435\u043B\u0438\u043A\u0430 \u043A\u0456\u043B\u044C\u043A\u0456\u0441\u0442\u044C \u0435\u043D\u0435\u0440\u0433\u0456\u0457.
+block.ol-low-temperature-smelter.name = Сплавова центрифуга
+block.ol-low-temperature-smelter.description = Виготовляє міцний в центрифузі омалітовий сплав з омаліту та титану. Потребує охолодження. Також в процесі виробляється невелика кількість енергії.
 
-block.ol-fuser.name = \u0417\u0440\u0456\u0434\u0436\u0443\u0432\u0430\u0447
-block.ol-fuser.description = \u0420\u043E\u0437\u0447\u0438\u043D\u044F\u0454 \u043E\u043C\u0430\u043B\u0456\u0442 \u0443 \u0432\u043E\u0434\u0456 \u0434\u043B\u044F \u043E\u0442\u0440\u0438\u043C\u0430\u043D\u043D\u044F \u043E\u043C\u0430\u043B\u0456\u0442\u043E\u0432\u043E\u0457 \u0440\u0456\u0434\u0438\u043D\u0438 \u0448\u043B\u044F\u0445\u043E\u043C \u043F\u043E\u0432\u0456\u043B\u044C\u043D\u043E\u0433\u043E \u043F\u0435\u0440\u0435\u043C\u0456\u0448\u0443\u0432\u0430\u043D\u043D\u044F \u0446\u0438\u0445 \u0456\u043D\u0433\u0440\u0435\u0434\u0456\u0454\u043D\u0442\u0456\u0432.
+block.ol-fuser.name = Зріджувач
+block.ol-fuser.description = Розчиняє омаліт у воді для отримання омалітової рідини шляхом повільного перемішування його.
 
-block.ol-hyper-receiver.name = \u0413\u0456\u043F\u0435\u0440 \u043F\u0430\u043D\u0435\u043B\u044C
-block.ol-hyper-receiver.description = \u041C\u0430\u043A\u0441\u0438\u043C\u0430\u043B\u044C\u043D\u043E \u043C\u043E\u0436\u043B\u0438\u0432\u0430 \u0441\u043E\u043D\u044F\u0447\u043D\u0430 \u043F\u0430\u043D\u0435\u043B\u044C. \u0412\u0438\u0440\u043E\u0431\u043B\u044F\u0454 \u0431\u0456\u043B\u044C\u0448\u0435 \u0435\u043D\u0435\u0440\u0433\u0456\u0457, \u043D\u0456\u0436 \u0432\u0435\u043B\u0438\u043A\u0430 \u0441\u043E\u043D\u044F\u0447\u043D\u0430 \u043F\u0430\u043D\u0435\u043B\u044C. \u0412\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0454 \u043E\u043C\u0430\u043B\u0456\u0442\u043E\u0432\u0443 \u0440\u0456\u0434\u0438\u043D\u0443 \u0434\u043B\u044F \u0437\u0431\u043E\u0440\u0443 \u0435\u043D\u0435\u0440\u0433\u0456\u0457. \u0419\u043E\u0433\u043E \u0434\u043E\u0431\u0440\u0435 \u0432\u0438\u043A\u043E\u0440\u0438\u0441\u0442\u043E\u0432\u0443\u0432\u0430\u0442\u0438 \u0434\u043B\u044F \u043F\u0456\u0434\u0437\u0430\u0440\u044F\u0434\u043A\u0438 \u0431\u0430\u0442\u0430\u0440\u0435\u0439 \u043F\u0440\u0438 \u0434\u0435\u043D\u043D\u043E\u043C\u0443 \u0441\u0432\u0456\u0442\u043B\u0456.
-block.ol-hyper-receiver.details = \u0412\u0438\u044F\u0432\u043B\u044F\u0454\u0442\u044C\u0441\u044F, \u043E\u043C\u0430\u043B\u0456\u0442\u043E\u0432\u0430 \u0440\u0456\u0434\u0438\u043D\u0430 \u0434\u0443\u0436\u0435 \u0434\u043E\u0431\u0440\u0435 \u043F\u043E\u0433\u043B\u0438\u043D\u0430\u0454 \u0441\u043E\u043D\u044F\u0447\u043D\u0443 \u0435\u043D\u0435\u0440\u0433\u0456\u044E, \u043D\u0430\u0432\u0456\u0442\u044C \u043A\u0440\u0430\u0449\u0435, \u043D\u0456\u0436 \u043A\u0440\u0435\u043C\u043D\u0456\u0439.
+block.ol-hyper-receiver.name = Гіпер панель
+block.ol-hyper-receiver.description = Найкраща сонячна панель, яка може існувати. Виробляє більше енергії, ніж велика сонячна панель. Використовує омалітову рідину для збору енергії. Може бути використана для підзарядки батарей при денному світлі.
+block.ol-hyper-receiver.details = Виявляється, омалітова рідина дуже добре поглинає сонячну енергію, навіть краще, ніж кремній.
 
-block.ol-blue-night.name = \u0421\u0438\u043D\u044F \u043D\u0456\u0447
-block.ol-blue-night.description = \u0421\u0442\u0440\u0456\u043B\u044F\u0454 \u0432 \u043D\u0430\u0437\u0435\u043C\u043D\u0438\u0445 \u0432\u043E\u0440\u043E\u0433\u0456\u0432 \u0437\u0430\u0440\u044F\u0434\u0436\u0435\u043D\u0438\u043C\u0438 \u043F\u0443\u0447\u043A\u0430\u043C\u0438 \u043E\u043C\u0430\u043B\u0456\u0442\u043E\u0432\u043E\u0457 \u0440\u0456\u0434\u0438\u043D\u0438, \u043F\u0440\u0438\u043C\u043E\u0440\u043E\u0436\u0443\u0454 \u0441\u0438\u0441\u0442\u0435\u043C\u0438 \u043F\u0440\u043E\u0442\u0438\u0432\u043D\u0438\u043A\u0430.
+block.ol-blue-night.name = Синя ніч
+block.ol-blue-night.description = Стріляє в наземних ворогів зарядженими пучками омалітової рідини, приморожує системи противника.
 
 ###Bars
-bar.acceleration = \u0420\u043E\u0437\u0433\u0456\u043D
+bar.acceleration = Розгін
