--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -1,47 +1,81 @@
-planet.ol-omaloon.name = \u041e\u043c\u0430\u043b\u0443\u043d
-planet.ol-omaloon.description = \u041f\u043b\u0430\u043d\u0435\u0442\u0430\u0020\u0432\u0020\u0456\u043d\u0448\u0456\u0439\u0020\u0437\u043e\u0440\u044f\u043d\u0456\u0439\u0020\u0441\u0438\u0441\u0442\u0435\u043c\u0456\u002e\u0020\u0425\u043e\u043b\u043e\u0434\u043d\u0430\u0020\u0437\u0456\u0440\u043a\u0430\u0020\u043d\u0435\u0020\u0434\u0430\u0454\u0020\u0457\u0439\u0020\u0434\u043e\u0441\u0442\u0430\u0442\u043d\u044c\u043e\u0020\u0442\u0435\u043f\u043b\u0430\u002c\u0020\u0442\u043e\u043c\u0443\u0020\u043d\u0430\u0020\u043f\u043e\u0432\u0435\u0440\u0445\u043d\u0456\u0020\u043f\u043b\u0430\u043d\u0435\u0442\u0438\u0020\u043f\u0430\u043d\u0443\u0454\u0020\u0432\u0456\u0447\u043d\u0430\u0020\u0437\u0438\u043c\u0430.
-planet.ol-omaloon.details = [orange]\u041d\u0430\u0439\u043a\u0440\u0430\u0449\u0430\u0020\u043f\u043b\u0430\u043d\u0435\u0442\u0430\u0020\u0437\u0020\u0443\u0441\u0456\u0445.
+###Planets
+planet.ol-omaloon.name = Омалун
+planet.ol-omaloon.description = Планета в іншій зоряній системі. Холодна зірка не дає їй достатньо тепла, тому на поверхні планети панує вічна зима.
+planet.ol-omaloon.details = [orange]Краща планета з усіх.
 
-planet.ol-amsha.name = \u0410\u043c\u0448\u0430
-planet.ol-amsha.description = \u0417\u0456\u0440\u043a\u0430\u0020\u043b\u0438\u0448\u0435\u0020\u0437\u0020\u043e\u0434\u043d\u043e\u044e\u0020\u043f\u043b\u0430\u043d\u0435\u0442\u043e\u044e.
+planet.ol-amsha.name = Амша
+planet.ol-amsha.description = Самостійна зірка, що є центром системи Амші.
 
-planet.ol-set.name = \u0421\u0435\u0442
-planet.ol-set.description = \u041f\u0440\u0438\u0440\u043e\u0434\u043d\u0438\u0439\u0020\u0441\u0443\u043f\u0443\u0442\u043d\u0438\u043a\u0020\u041e\u043c\u0430\u043b\u0443\u043d\u0443.
+planet.ol-set.name = Сет
+planet.ol-set.description = Супутник омалуну.
 
 # region Items
 
-item.ol-omalite.name = \u041e\u043c\u0430\u043b\u0456\u0442
-item.ol-omalite.description = \u0425\u043e\u043b\u043e\u0434\u043d\u0438\u0439\u0020\u0456\u0020\u0437\u043b\u0435\u0433\u043a\u0430\u0020\u0440\u0430\u0434\u0456\u043e\u0430\u043a\u0442\u0438\u0432\u043d\u0438\u0439\u0020\u043a\u0430\u043c\u0456\u043d\u044c\u002e\u0020\u0412\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0454\u0442\u044c\u0441\u044f\u0020\u0432\u0020\u0435\u043d\u0435\u0440\u0433\u0435\u0442\u0438\u0446\u0456\u0020\u0442\u0430\u0020\u0431\u043e\u0454\u043f\u0440\u0438\u043f\u0430\u0441\u0430\u0445.
+item.ol-grumon.name = Ґрумон
+item.ol-grumon.description = Використовується в передовій обороні та виробництві.
+item.ol-grumon.details = метал з сильними магнітними здібностями.
 
-item.ol-omalite-alloy.name = \u041e\u043c\u0430\u043b\u0456\u0442\u043e\u0432\u0438\u0439\u0020\u0441\u043f\u043b\u0430\u0432
-item.ol-omalite-alloy.description = \u0425\u043e\u043b\u043e\u0434\u043d\u0438\u0439\u0020\u0456\u0020\u0441\u043b\u0430\u0431\u043e\u0440\u0430\u0434\u0456\u043e\u0430\u043a\u0442\u0438\u0432\u043d\u0438\u0439\u0020\u0441\u043f\u043b\u0430\u0432\u002e\u0020\u0412\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0454\u0442\u044c\u0441\u044f\u0020\u044f\u043a\u0020\u0431\u043e\u0454\u043f\u0440\u0438\u043f\u0430\u0441\u0438\u0020\u0456\u0020\u043c\u0430\u0442\u0435\u0440\u0456\u0430\u043b\u0020\u0434\u043b\u044f\u0020\u0431\u0443\u0434\u0456\u0432\u0435\u043b\u044c\u002e
+item.ol-omalite.name = Омаліт
+item.ol-omalite.description = Використовується у виробництві енергії та боєприпасів.
+item.ol-omalite.details = Холодний і злегка радіоактивний камінь.
+
+item.ol-omalite-alloy.name = Омалітовий сплав
+item.ol-omalite-alloy.description = Широко використовується у спорудах.
+item.ol-omalite-alloy.details = Холодний і слаборадіоактивний сплав.
+
+item.ol-magnetic-combination.name = Магнетична комбінація
+item.ol-magnetic-combination.description = Використовується у транспортуванні та проекторах.
+
+item.ol-zarini.name = Зариній
+item.ol-zarini.description = Використовується в спеціальних видах боєприпасів і у конструкції передових одиниць.
+
+item.ol-valkon.name = Влькон
+item.ol-valkon.description = Використовується у юніто-будуванні та передових конструкціях.
 
 ###Liquids
 
-liquid.ol-liquid-omalite.name = \u041e\u043c\u0430\u043b\u0456\u0442\u043e\u0432\u0430\u0020\u0440\u0456\u0434\u0438\u043d\u0430
-liquid.ol-liquid-omalite.description = \u041d\u0430\u0434\u0437\u0432\u0438\u0447\u0430\u0439\u043d\u043e\u0020\u0445\u043e\u043b\u043e\u0434\u043d\u0430\u0020\u0440\u0456\u0434\u0438\u043d\u0430\u002c\u0020\u0449\u043e\u0020\u0432\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0454\u0442\u044c\u0441\u044f\u0020\u0434\u043b\u044f\u0020\u043e\u0445\u043e\u043b\u043e\u0434\u0436\u0435\u043d\u043d\u044f\u0020\u0431\u0456\u043b\u044c\u0448\u0020\u043f\u043e\u0442\u0443\u0436\u043d\u0438\u0445\u0020\u0440\u0435\u0430\u043a\u0442\u043e\u0440\u0456\u0432\u0020\u0456\u0020\u0434\u0435\u044f\u043a\u0438\u0445\u0020\u0437\u0430\u0432\u043e\u0434\u0456\u0432\u002e
+liquid.ol-liquid-omalite.name = Омалітова рідина
+liquid.ol-liquid-omalite.description = Використовується для охолодження більш потужних реакторів і заводів.
+liquid.ol-liquid-omalite.details = Холодна.
+
+liquid.ol-dalanite.name = Даланіт
+liquid.ol-dalanite.description = Розпилюється на ворогів і використовується для виробництва предметів.
 
 ###Blocks
 
-block.ol-omalite-alloy-wall.name = \u0421\u043f\u043b\u0430\u0432\u043e\u0432\u0430\u0020\u0441\u0442\u0456\u043d\u0430
-block.ol-omalite-alloy-wall.description = \u0417\u0430\u0445\u0438\u0449\u0430\u0454\u0020\u0441\u043e\u044e\u0437\u043d\u0456\u0020\u0431\u0443\u0434\u0456\u0432\u043b\u0456\u0020\u0432\u0456\u0434\u0020\u0432\u043e\u0440\u043e\u0436\u0438\u0445\u0020\u0441\u043d\u0430\u0440\u044f\u0434\u0456\u0432\u002e\u0020\u0414\u0443\u0436\u0435\u0020\u0445\u043e\u043b\u043e\u0434\u043d\u0430\u002c\u0020\u0442\u043e\u043c\u0443\u0020\u0431\u043b\u043e\u043a\u0438\u002c\u0020\u044f\u043a\u0456\u0020\u0432\u0434\u0430\u0440\u0438\u043b\u0438\u0020\u0457\u0457\u0020\u043b\u0430\u0437\u0435\u0440\u043d\u0438\u043c\u0020\u043f\u0440\u043e\u043c\u0435\u043d\u0435\u043c\u002c\u0020\u0437\u0430\u043c\u0435\u0440\u0437\u0430\u044e\u0442\u044c\u002e\u0020\u041d\u0435\u0020\u0433\u043e\u0440\u0438\u0442\u044c\u002e
+block.ol-gravel.name = Гравій
+block.ol-gravel-dalanite.name = Гравій з даланітом
+block.ol-flor-dalanite.name = Даланіт
+block.ol-deep-dalanite.name = Глибокий даланіт
 
-block.ol-omalite-alloy-wall-large.name = \u0412\u0435\u043b\u0438\u043a\u0430\u0020\u0441\u043f\u043b\u0430\u0432\u043e\u0432\u0430\u0020\u0441\u0442\u0456\u043d\u0430
-block.ol-omalite-alloy-wall-large.description = \u0417\u0430\u0445\u0438\u0449\u0430\u0454\u0020\u0431\u0443\u0434\u0456\u0432\u043b\u0456\u0020\u0432\u0456\u0434\u0020\u0432\u043e\u0440\u043e\u0436\u0438\u0445\u0020\u0441\u043d\u0430\u0440\u044f\u0434\u0456\u0432\u002e\u0020\u0414\u0443\u0436\u0435\u0020\u0445\u043e\u043b\u043e\u0434\u043d\u0430\u002c\u0020\u0442\u043e\u043c\u0443\u0020\u0431\u043b\u043e\u043a\u0438\u002c\u0020\u044f\u043a\u0456\u0020\u0432\u0434\u0430\u0440\u0438\u043b\u0438\u0020\u0457\u0457\u0020\u043b\u0430\u0437\u0435\u0440\u043d\u0438\u043c\u0020\u043f\u0440\u043e\u043c\u0435\u043d\u0435\u043c\u002c\u0020\u0437\u0430\u043c\u0435\u0440\u0437\u0430\u044e\u0442\u044c\u002e\u0020\u041d\u0435\u0020\u0433\u043e\u0440\u0438\u0442\u044c\u002e
-block.ol-test-joint.name = \u0422\u0435\u0441\u0442\u043e\u0432\u0438\u0439\u0020\u043f\u043e\u0454\u0434\u043d\u0443\u0432\u0430\u043b\u044c\u043d\u0438\u0439\u0020\u0431\u043b\u043e\u043a
+block.ol-omalite-alloy-wall.name = Стіна з сплаву
+block.ol-omalite-alloy-wall.description = Захищає будівлі від ворожих снарядів. Заморожує одиниці, які мають лазерну зброю, якщо вони вдарять стіну. Надміцна. Не горить.
 
-block.ol-low-temperature-smelter.name = \u0421\u043f\u043b\u0430\u0432\u043e\u0432\u0430\u0020\u0446\u0435\u043d\u0442\u0440\u0438\u0444\u0443\u0433\u0430
-block.ol-low-temperature-smelter.description = \u0412\u0438\u0433\u043e\u0442\u043e\u0432\u043b\u044f\u0454\u0020\u043c\u0456\u0446\u043d\u0438\u0439\u0020\u0432\u0020\u0446\u0435\u043d\u0442\u0440\u0438\u0444\u0443\u0437\u0456\u0020\u043e\u043c\u0430\u043b\u0456\u0442\u043e\u0432\u0438\u0439\u0020\u0441\u043f\u043b\u0430\u0432\u0020\u0437\u0020\u043e\u043c\u0430\u043b\u0456\u0442\u0443\u0020\u0442\u0430\u0020\u0442\u0438\u0442\u0430\u043d\u0443\u002e\u0020\u041f\u043e\u0442\u0440\u0435\u0431\u0443\u0454\u0020\u043e\u0445\u043e\u043b\u043e\u0434\u0436\u0435\u043d\u043d\u044f\u002e\u0020\u0422\u0430\u043a\u043e\u0436\u0020\u0432\u0020\u043f\u0440\u043e\u0446\u0435\u0441\u0456\u0020\u0432\u0438\u0440\u043e\u0431\u043b\u044f\u0454\u0442\u044c\u0441\u044f\u0020\u043d\u0435\u0432\u0435\u043b\u0438\u043a\u0430\u0020\u043a\u0456\u043b\u044c\u043a\u0456\u0441\u0442\u044c\u0020\u0435\u043d\u0435\u0440\u0433\u0456\u0457\u002e
+block.ol-omalite-alloy-wall-large.name = Велика стіна з сплаву
+block.ol-omalite-alloy-wall-large.description = Захищає будівлі від ворожих снарядів. Заморожує одиниці, які мають лазерну зброю, якщо вони вдарять стіну. Надміцна. Не горить.
 
-block.ol-fuser.name = \u0417\u0440\u0456\u0434\u0436\u0443\u0432\u0430\u0447
-block.ol-fuser.description = \u0420\u043e\u0437\u0447\u0438\u043d\u044f\u0454\u0020\u043e\u043c\u0430\u043b\u0456\u0442\u0020\u0443\u0020\u0432\u043e\u0434\u0456\u0020\u0434\u043b\u044f\u0020\u043e\u0442\u0440\u0438\u043c\u0430\u043d\u043d\u044f\u0020\u043e\u043c\u0430\u043b\u0456\u0442\u043e\u0432\u043e\u0457\u0020\u0440\u0456\u0434\u0438\u043d\u0438\u0020\u0448\u043b\u044f\u0445\u043e\u043c\u0020\u043f\u043e\u0432\u0456\u043b\u044c\u043d\u043e\u0433\u043e\u0020\u043f\u0435\u0440\u0435\u043c\u0456\u0448\u0443\u0432\u0430\u043d\u043d\u044f\u0020\u0439\u043e\u0433\u043e\u002e
+block.ol-test-joint.name = Тестовий поєднувальний блок
 
-block.ol-hyper-receiver.name = \u0413\u0456\u043f\u0435\u0440\u0020\u043f\u0430\u043d\u0435\u043b\u044c
-block.ol-hyper-receiver.description = \u041d\u0430\u0439\u043a\u0440\u0430\u0449\u0430\u0020\u0441\u043e\u043d\u044f\u0447\u043d\u0430\u0020\u043f\u0430\u043d\u0435\u043b\u044c\u002c\u0020\u044f\u043a\u0430\u0020\u043c\u043e\u0436\u0435\u0020\u0456\u0441\u043d\u0443\u0432\u0430\u0442\u0438\u002e\u0020\u0412\u0438\u0440\u043e\u0431\u043b\u044f\u0454\u0020\u0431\u0456\u043b\u044c\u0448\u0435\u0020\u0435\u043d\u0435\u0440\u0433\u0456\u0457\u002c\u0020\u043d\u0456\u0436\u0020\u0432\u0435\u043b\u0438\u043a\u0430\u0020\u0441\u043e\u043d\u044f\u0447\u043d\u0430\u0020\u043f\u0430\u043d\u0435\u043b\u044c\u002e\u0020\u0412\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u043e\u0432\u0443\u0454\u0020\u043e\u043c\u0430\u043b\u0456\u0442\u043e\u0432\u0443\u0020\u0440\u0456\u0434\u0438\u043d\u0443\u0020\u0434\u043b\u044f\u0020\u0437\u0431\u043e\u0440\u0443\u0020\u0435\u043d\u0435\u0440\u0433\u0456\u0457\u002e\u0020\u041c\u043e\u0436\u0435\u0020\u0431\u0443\u0442\u0438\u0020\u0432\u0438\u043a\u043e\u0440\u0438\u0441\u0442\u0430\u043d\u0430\u0020\u0434\u043b\u044f\u0020\u043f\u0456\u0434\u0437\u0430\u0440\u044f\u0434\u043a\u0438\u0020\u0431\u0430\u0442\u0430\u0440\u0435\u0439\u0020\u043f\u0440\u0438\u0020\u0434\u0435\u043d\u043d\u043e\u043c\u0443\u0020\u0441\u0432\u0456\u0442\u043b\u0456\u002e
-block.ol-hyper-receiver.details = \u0412\u0438\u044f\u0432\u043b\u044f\u0454\u0442\u044c\u0441\u044f\u002c\u0020\u043e\u043c\u0430\u043b\u0456\u0442\u043e\u0432\u0430\u0020\u0440\u0456\u0434\u0438\u043d\u0430\u0020\u0434\u0443\u0436\u0435\u0020\u0434\u043e\u0431\u0440\u0435\u0020\u043f\u043e\u0433\u043b\u0438\u043d\u0430\u0454\u0020\u0441\u043e\u043d\u044f\u0447\u043d\u0443\u0020\u0435\u043d\u0435\u0440\u0433\u0456\u044e\u002c\u0020\u043d\u0430\u0432\u0456\u0442\u044c\u0020\u043a\u0440\u0430\u0449\u0435\u002c\u0020\u043d\u0456\u0436\u0020\u043a\u0440\u0435\u043c\u043d\u0456\u0439\u002e
+block.ol-multi-factory.name = Мульти фабрика
+block.ol-multi-factory.description = Має 3 рецепти створення предметів. Рецепти можна змінювати. Унікальна конструкчія цього блоку дозволяє виготовляти предмети майже з однаковою швидкістю.
 
-block.ol-blue-night.name = \u0421\u0438\u043d\u044f\u0020\u043d\u0456\u0447
-block.ol-blue-night.description = \u0421\u0442\u0440\u0456\u043b\u044f\u0454\u0020\u0432\u0020\u043d\u0430\u0437\u0435\u043c\u043d\u0438\u0445\u0020\u0432\u043e\u0440\u043e\u0433\u0456\u0432\u0020\u0437\u0430\u0440\u044f\u0434\u0436\u0435\u043d\u0438\u043c\u0438\u0020\u043f\u0443\u0447\u043a\u0430\u043c\u0438\u0020\u043e\u043c\u0430\u043b\u0456\u0442\u043e\u0432\u043e\u0457\u0020\u0440\u0456\u0434\u0438\u043d\u0438\u002c\u0020\u043f\u0440\u0438\u043c\u043e\u0440\u043e\u0436\u0443\u0454\u0020\u0441\u0438\u0441\u0442\u0435\u043c\u0438\u0020\u043f\u0440\u043e\u0442\u0438\u0432\u043d\u0438\u043a\u0430\u002e
+block.ol-low-temperature-smelter.name = Сплавна центрифуга
+block.ol-low-temperature-smelter.description = Виробляє міцний омалітовий сплав з омаліту та титану. Потребує охолодження. Під час процесу виготовлення предмету виробляє невелику кількість енергії.
 
+block.ol-fuser.name = Розріджувач
+block.ol-fuser.description = Розчиняє омаліт, шляхом повільного перемішування у воді інградієнтів, для отримання омалітової рідини.
+
+block.ol-hyper-receiver.name = Гіпер панель
+block.ol-hyper-receiver.description = Найкраща сонячна панель. Виробляє більше енергії, ніж велика сонячна панель. Використовує омалітову рідину для збору енергії. Можна використовувати для підзарядки акумуляторів у світлий час доби.
+block.ol-hyper-receiver.details = Виявляється, омалітова рідина дуже добре поглинає сонячну енергію, навіть краще за кремній.
+
+block.ol-blue-night.name = Синя ніч
+block.ol-blue-night.description = Стріляє зарядженими снарядами з омалітової рідини в наземних противників, заморожуючи і роблячи їх більш вразливим для вибухів. Розширена система самонаведення не дає ворогам шансу вижити.
+
+###StusEffects
+status.ol-slime.name = Покритий слизом
 ###Bars
-bar.acceleration = \u0420\u043e\u0437\u0433\u0456\u043d
+bar.acceleration = Розгін
+bar.liquid-capacity = Рідини:
+###Stats
+stat.magnetic = Магнітність
