--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -1,3 +1,14 @@
+###Mod
+mod.ol.disclaimer.title = [accent]Увага![]
+mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]ще в розробці[].\nВи можете зустріти баги та не завершений контент. \n [red]Мод не придатний для гри.[]
+mod.ol.ok = Ок
+mod.ol.doNotShowItAgain = Не показувати це вікно знову
+mod.ol.name = [#87ceeb]Omaloon[]
+mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
+mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[].
+mod.ol.description = [#badbeb]Мій перший мод. Додає унікальний контент.[]
+mod.ol.musics = [#7f7f7f]Музика:[] \nСкоро буде!
+
 ###Planets
 planet.ol-omaloon.name = Омалун
 planet.ol-omaloon.description = Планета в іншій зоряній системі. Холодна зірка не дає їй достатньо тепла, тому на поверхні планети панує вічна зима.
@@ -5,9 +16,6 @@ planet.ol-omaloon.details = [orange]Краща планета з усіх.
 
 planet.ol-amsha.name = Амша
 planet.ol-amsha.description = Самостійна зірка, що є центром системи Амші.
-
-planet.ol-set.name = Сет
-planet.ol-set.description = Супутник омалуну.
 
 # region Items
 
