--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -5,7 +5,7 @@ mod.ol.ok = Ок
 mod.ol.doNotShowItAgain = Не показувати це вікно знову
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[].
+mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[], yesC48.
 mod.ol.description = [#badbeb]Мій перший мод. Додає унікальний контент.[]
 mod.ol.musics = [#7f7f7f]Музика:[] \nСкоро буде!
 
