--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -8,13 +8,15 @@ mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
 mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[], yesC48.
 mod.ol.description = [#badbeb]Мій перший мод. Додає унікальний контент.[]
 mod.ol.musics = [#7f7f7f]Музика:[] \nСкоро буде!
+mod.ol.omaloon-settings = Налаштування Omaloon
+mod.ol.show = Приховати вікно попередження[#7f7f7f](потребує перезапуск)[]
 
 ###Planets
-planet.ol-omaloon.name = Омалун
+planet.ol-omaloon.name = Омалун[red][приховано][]
 planet.ol-omaloon.description = Планета в іншій зоряній системі. Холодна зірка не дає їй достатньо тепла, тому на поверхні планети панує вічна зима.
 planet.ol-omaloon.details = [orange]Краща планета з усіх.
 
-planet.ol-amsha.name = Амша
+planet.ol-amsha.name = Амша[red][приховано][]
 planet.ol-amsha.description = Самостійна зірка, що є центром системи Амші.
 
 # region Items
