--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -1,13 +1,14 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Увага![]
-mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]ще в розробці[].\nВи можете зустріти баги та не завершений контент. \n [red]Мод не придатний для гри.[]
-mod.ol.ok = Ок
+mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]ще в розробці[].\nВи можете зустріти баги та не завершений контент. \n [red]Модифікація ще не придатна для гри.[]
+mod.ol.ok = Гаразд
 mod.ol.doNotShowItAgain = Не показувати це вікно знову
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
 mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[], yesC48.
-mod.ol.description = [#badbeb]Мій перший мод. Додає унікальний контент.[]
+mod.ol.description = [#badbeb]Моя перша модифікація. Додає унікальний контент.[]
 mod.ol.musics = [#7f7f7f]Музика:[] \nСкоро буде!
+mod.ol.subtitle = [#87ceeb]Хехе
 mod.ol.omaloon-settings = Налаштування Omaloon
 mod.ol.show = Приховати вікно попередження[#7f7f7f](потребує перезапуск)[]
 
@@ -58,10 +59,10 @@ block.ol-gravel-dalanite.name = Гравій із даланітом
 block.ol-flor-dalanite.name = Даланіт
 block.ol-deep-dalanite.name = Глибокий даланіт
 
-block.ol-omalite-alloy-wall.name = Стіна зі сплаву
+block.ol-omalite-alloy-wall.name = Стіна з омалітового сплаву
 block.ol-omalite-alloy-wall.description = Захищає будівлі від ворожих снарядів. Заморожує одиниці, що мають лазерну зброю, якщо вони вдарять стіну. Надміцна. Не горить.
 
-block.ol-omalite-alloy-wall-large.name = Велика стіна зі сплаву
+block.ol-omalite-alloy-wall-large.name = Велика стіна з омалітового сплаву
 block.ol-omalite-alloy-wall-large.description = Захищає будівлі від ворожих снарядів. Заморожує одиниці, що мають лазерну зброю, якщо вони вдарять стіну. Надміцна. Не горить.
 
 block.ol-test-joint.name = Тестовий поєднувальний блок
@@ -69,15 +70,14 @@ block.ol-test-joint.name = Тестовий поєднувальний блок
 block.ol-multi-factory.name = Мультифабрика
 block.ol-multi-factory.description = Має 3 рецепти створення предметів. Рецепти можна змінювати. Унікальна конструкція цього блоку дозволяє виготовляти предмети майже з однаковою швидкістю.
 
-block.ol-low-temperature-smelter.name = Сплавна центрифуга
+block.ol-low-temperature-smelter.name = Омалітова центрифуга
 block.ol-low-temperature-smelter.description = Виробляє міцний омалітовий сплав з омаліту та титану. Потребує охолодження. Під час процесу виготовлення виробляє невелику кількість енергії.
 
 block.ol-fuser.name = Розріджувач
 block.ol-fuser.description = Розчиняє омаліт, шляхом повільного перемішування у воді інгредієнтів, щоб отримати омалітову рідину.
 
-block.ol-hyper-receiver.name = Гіпер панель
-block.ol-hyper-receiver.description = Найкраща сонячна панель. Виробляє більше енергії, ніж велика сонячна панель. Використовує омалітову рідину для збору енергії. Можна використовувати для підзарядки акумуляторів у світлий час доби.
-block.ol-hyper-receiver.details = Виявляється, омалітова рідина дуже добре поглинає сонячну енергію, навіть краще за кремній.
+block.ol-hyper-receiver.name = Омалітова сонячна панель
+block.ol-hyper-receiver.description = Збирає енергію сонця. Потребує омалітової рідини для функціонування.
 
 block.ol-blue-night.name = Синя ніч
 block.ol-blue-night.description = Стріляє зарядженими снарядами з омалітової рідини в наземних противників, заморожуючи і роблячи їх більш вразливим для вибухів. Розширена система самонаведення не дає ворогам шансу вижити.
