--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -8,9 +8,14 @@ mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
 mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[], yesC48.
 mod.ol.description = [#badbeb]Моя перша модифікація. Додає унікальний контент.[]
 mod.ol.musics = [#7f7f7f]Музика:[] \nСкоро буде!
-mod.ol.subtitle = [#87ceeb]Хехе
+mod.ol.subtitle1 = [#87ceeb]Хехе
+mod.ol.subtitle2 = [#87ceeb]Я живий!
+mod.ol.subtitle3 = [#87ceeb]:З
 mod.ol.omaloon-settings = Налаштування Omaloon
-mod.ol.show = Приховати вікно попередження[#7f7f7f](потребує перезапуск)[]
+setting.mod.ol.show.name = Приховати вікно попередження
+setting.mod.ol.show.description = Прибирає вікно попередження що з'являється після запуску гри.
+setting.mod.ol.update-check.name = Перевіряти [#87ceeb]Omaloon[] на наявність оновлень
+setting.mod.ol.update-check.description = Якщо ввімкнено, [#87ceeb]Omaloon[] перевіряє себе на наявність оновлень.
 
 ###Planets
 planet.ol-omaloon.name = Омалун[red][приховано][]
@@ -89,3 +94,8 @@ bar.acceleration = Розгін
 bar.liquid-capacity = Рідини:
 ###Stats
 stat.magnetic = Магнітність
+stat.average-surface-temperature = Середня температура поверхні
+unit.kelvins = [#bfbfbf]K[]
+stat.radius = Радіус
+unit.kilometers = [#bfbfbf]міл. км[]
+stat.orbit-radius = Радіус орбіти
