plz, stay tuned for further updates

--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -1,6 +1,6 @@
 ###Mod
 mod.ol.disclaimer.title = [accent]Увага![]
-mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]ще в розробці[].\nВи можете зустріти баги та не завершений контент. \n [red]Модифікація ще не придатна для гри.[] Слідкуйте за подальшими оновленнями.
+mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]ще в розробці[].\nВи можете зустріти баги та не завершений контент. \n [red]Модифікація ще не придатна для гри.[]\n Слідкуйте за подальшими оновленнями.
 mod.ol.ok = Гаразд
 mod.ol.doNotShowItAgain = Не показувати це вікно знову
 mod.ol.name = [#87ceeb]Omaloon[]
