--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -5,14 +5,17 @@ mod.ol.ok = Гаразд
 mod.ol.doNotShowItAgain = Не показувати це вікно знову
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj-Silin, [#e4b400]MissionaryPoseBest, [#3498db]SUS[], yesC48.
+mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48.
 mod.ol.description = [#badbeb]Моя перша модифікація. Додає унікальний контент.[]
-mod.ol.musics = [#7f7f7f]Музика:[] \nСкоро буде!
+mod.ol.musics = [#7f7f7f]Музичний супровід:[] \nСкоро буде!
 mod.ol.subtitle1 = [#87ceeb]Хехе
 mod.ol.subtitle2 = [#87ceeb]Я живий!
 mod.ol.subtitle3 = [#87ceeb]:З
-mod.ol.omaloon-settings = Налаштування Omaloon
-setting.mod.ol.show.name = Приховати вікно попередження
+mod.ol.subtitle4 = [#87ceeb]Спільнота!
+mod.ol.omaloon-settings = Omaloon
+setting.ol.discord = [accent]Приєднуйтесь до спільноти Omaloon у Discord![] [#87ceeb]\n\nТут ви зможете: \n- Поспілкуватися з розробниками Omaloon! \n- Запропонувати свої ідеї! \n- Поспілкуватися з іншими \n«цінителями прекрасного»! \n- Долучитися до розробки Omaloon!
+setting.ol.discord-join = Приєднуйтесь до спільноти Omaloon у Discord!
+setting.mod.ol.show.name = Приховати вікно попередження[#7f7f7f](потребує перезапуск)[]
 setting.mod.ol.show.description = Прибирає вікно попередження що з'являється після запуску гри.
 
 ###Planets
