--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -55,15 +55,14 @@ liquid.ol-liquid-omalite.name = Омалітова рідина
 liquid.ol-liquid-omalite.description = Використовується для охолодження більш потужних реакторів і заводів.
 liquid.ol-liquid-omalite.details = Холодна.
 
-liquid.ol-dalanite.name = Даланіт
-liquid.ol-dalanite.description = Використовується для виробництва предметів. Зазвичай розпилюють на ворогів.
+liquid.ol-dalanii.name = Даланій
+liquid.ol-dalanii.description = Використовується для виробництва предметів.
 
 ###Blocks
 
-block.ol-gravel.name = Гравій
-block.ol-gravel-dalanite.name = Гравій із даланітом
-block.ol-flor-dalanite.name = Даланіт
-block.ol-deep-dalanite.name = Глибокий даланіт
+block.ol-gravel-dalanii.name = Гравій із даланієм
+block.ol-flor-dalanii.name = Даланій
+block.ol-deep-dalanii.name = Глибокий даланій
 
 block.ol-omalite-alloy-wall.name = Стіна з омалітового сплаву
 block.ol-omalite-alloy-wall.description = Захищає будівлі від ворожих снарядів. Заморожує одиниці, що мають лазерну зброю, якщо вони вдарять стіну. Надміцна. Не горить.
@@ -86,7 +85,7 @@ block.ol-hyper-receiver.name = Омалітова сонячна панель
 block.ol-hyper-receiver.description = Збирає енергію сонця. Потребує омалітової рідини для функціонування.
 
 block.ol-blue-night.name = Синя ніч
-block.ol-blue-night.description = Стріляє зарядженими снарядами з омалітової рідини в наземних противників, заморожуючи і роблячи їх більш вразливим для вибухів. Розширена система самонаведення не дає ворогам шансу вижити.
+block.ol-blue-night.description = Стріляє зарядженими снарядами з омалітової рідини в наземних противників, заморожуючи і роблячи їх більш вразливим для вибухів. Вдосконалена система самонаведення не дає ворогам шансу втекти.
 
 ###StusEffects
 status.ol-slime.name = Покритий слизом
