--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -15,7 +15,7 @@ mod.ol.subtitle4 = [#87ceeb]Сообщество!
 mod.ol.omaloon-settings = Omaloon
 setting.ol.discord = [accent]Присоединяйтесь к сообществу Omaloon в Discord![] [#87ceeb]\n\nЗдесь вы сможете: Пообщаться с разработчиками Omaloon! \n- Предложить свои идеи! \n- Пообщаться с другими \n«ценителями прекрасного»! \n- Присоединиться к разработке Omaloon!
 setting.ol.discord-join = Присоединяйтесь к сообществу Omaloon в Discord!
-setting.mod.ol.show.name = Скрыть окно предупреждения[#7f7f7f](требует перезапуска)[]
+setting.mod.ol.show.name = Скрыть окно предупреждения
 setting.mod.ol.show.description = Убирает окно предупреждения, которое появляется после запуска игры.
 
 ###Planets
@@ -98,5 +98,5 @@ stat.magnetic = Магнитность
 stat.average-surface-temperature = Средняя температура поверхности
 unit.kelvins = [#bfbfbf]К[]
 stat.radius = Радиус
-unit.kilometers = [#bfbfbf]мил. км[]
+unit.kilometers = [#bfbfbf]км³[]
 stat.orbit-radius = Радиус орбиты
