--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -5,7 +5,7 @@ mod.ol.ok = Ладно
 mod.ol.doNotShowItAgain = Не показывать это окно снова
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Помощники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48.
+mod.ol.contributors = [#7f7f7f]Помощники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, TheEE145.
 mod.ol.description = [#badbeb]Моя первая модификация. Добавляет уникальный контент.[]
 mod.ol.musics = [#7f7f7f]Музыкальное сопровождение:[] \nСкоро будет!
 mod.ol.subtitle1 = [#87ceeb]Хехе
