--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -5,7 +5,7 @@ mod.ol.ok = Гаразд
 mod.ol.doNotShowItAgain = Не показувати це вікно знову
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48.
+mod.ol.contributors = [#7f7f7f]Помічники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, TheEE145.
 mod.ol.description = [#badbeb]Моя перша модифікація. Додає унікальний контент.[]
 mod.ol.musics = [#7f7f7f]Музичний супровід:[] \nСкоро буде!
 mod.ol.subtitle1 = [#87ceeb]Хехе
