looks-little-better

--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -3,6 +3,10 @@ mod.ol.disclaimer.title = [акцент]Обережно![]
 mod.ol.disclaimer.text = Omaloon-mod[red]все ще знаходиться в розробці[].\nВи можете помітити помилки та не завершений вміст.\n[red]Наразі мод не придатний для гри.[]\nСтежте за подальшими оновленнями.
 mod.ol.ok = ОК
 mod.ol.doNotShowItAgain = Не показувати знову
+mod.ol.updater.tile = Знайдено нову версію!
+mod.ol.updater = Знайдено нову версію [#87ceeb]Omaloon[]! \nШвидше за все, додано новий вміст або виправлено деякі помилки. Рекомендовано встановити новішу версію. \n\n[gray]Поточна версія Omaloon v{0}, а остання v{1}[]
+mod.ol.updater.load = Встановити зараз!
+mod.ol.updater.later = Нагадати пізніше
 mod.ol.name = [#87ceeb]Omaloon[]
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
 mod.ol.contributors = [#7f7f7f]Співрозробники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[], TheEE145, Zelaux.
@@ -16,7 +20,9 @@ mod.ol.omaloon-settings = Omaloon
 setting.ol.discord = [accent]Приєднайтеся до спільноти Omaloon Discord![] \n[#87ceeb]Там ви можете: \n\n- спілкуватися з розробниками та співрозробниками Omaloon; \n- Пропонувати свої ідеї; \n- Спілкуватися з іншими «цінителями прекрасного»; \n- Внести свій внесок у розвиток Omaloon!
 setting.ol.discord-join = Приєднайтеся до спільноти Omaloon Discord!
 setting.mod.ol.show.name = Приховати вікно попередження
-setting.mod.ol.show.description = Видаляє вікно попередження, яке з'являється після запуску гри.
+setting.mod.ol.show.description = Вимикає вікно попередження, яке з'являється після запуску гри.
+setting.mod.ol.check.name = Перевіряти на наявність оновлень
+setting.mod.ol.check.description = Якщо ввімкнено, [#87ceeb]Omaloon[] автоматично перевірятиме наявність оновлень під час запуску Mindustry \nі повідомлятиме вас, якщо знайде оновлення.
 
 ###Planets
 planet.ol-omaloon.name = Омалун[red][приховано][]
