better-for-stats

--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -96,6 +96,11 @@ status.ol-slime.name = Покритий слизом
 ###Bars
 bar.acceleration = Розгін
 ###Stats
+category.pressure = Тиск
+stat.pressure-consume = Споживання тиску
+stat.pressure-production = Виробництво тиску
+stat.max-pressure = Максимальний тиск
+unit.pressure = одиниць тиску
 stat.requirements = Рецепти
 stat.damage-share = Частка шкоди
 stat.magnetic = Магнітна сприйнятливість
