reinforced-pressure-counter regions

--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -96,6 +96,7 @@ status.ol-slime.name = Покритий слизом
 ###Bars
 bar.acceleration = Розгін
 ###Stats
+stat.pressure = Тиск:
 category.pressure = Тиск
 stat.pressure-consume = Споживання тиску
 stat.pressure-production = Виробництво тиску
