cleaning if I deleted something important please put it back

--- a/assets/bundles/bundle_pt_BR.properties
+++ b/assets/bundles/bundle_pt_BR.properties
@@ -3,18 +3,24 @@ mod.ol.disclaimer.title = [accent]Cuidado![]
 mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]ainda em desenvolvimento[].\nVocê pode encontrar bugs e conteudo incompleto. \n [red]Enquanto o mod não é jogavel. []\n Fique de olho para mais atualizações.
 mod.ol.ok = Ok
 mod.ol.doNotShowItAgain = Não mostrar essa janela novamente.
+
 mod.ol.name = [#87ceeb]Omaloon[]
-mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
+
+mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145
 mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[], TheEE145, Zelaux.
 mod.ol.description = [#badbeb]Meu primeiro mod. Adiciona principalmente conteudo único.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nEm breve!
+
 mod.ol.subtitle1 = [#87ceeb]he he
 mod.ol.subtitle2 = [#87ceeb]Estou vivo!
 mod.ol.subtitle3 = [#87ceeb]:З
 mod.ol.subtitle4 = [#87ceeb]Comunidade!
+
 mod.ol.omaloon-settings = Omaloon
+
 setting.ol.discord = [accent]Junte-se a comunidade do Discord do Omaloon![] \n[#87ceeb]La você pode: \n\n- Conversar com os desenvolvedores de Omaloon! \n- Oferecer suas ideias! \n- Conversar com outros «connoisseurs of beauty»! \n- Se juntar ao desenvolvimento do Omaloon!
 setting.ol.discord-join = Junte-se a comunidade do Discord do Omaloon!
+
 setting.mod.ol.show.name = Esconder janela de aviso[#7f7f7f](precisa reiniciar)[]
 setting.mod.ol.show.description = Remove a janela de aviso que aparece ao iniciar o jogo.
 
@@ -26,7 +32,7 @@ planet.ol-omaloon.details = [orange]Melhor planeta de todos.
 
 planet.ol-amsha.name = Amsha[red][hidden][]
 planet.ol-amsha.description = Uma estrela independente que é o centro do sistema de Amsha.
-# region Itens
+###Items
 
 item.ol-grumon.name = Grumon
 item.ol-grumon.description = Usado em defesa e produção.
@@ -90,12 +96,15 @@ block.ol-freezing.description = Atira balas carregadas de Omalite Liquido compac
 
 ###Status effects
 status.ol-slime.name = Pegajoso
+
 ###Bars
 bar.acceleration = Aceleração
+
 ###Stats
 stat.magnetic = Suscetibilidade magnética
 stat.average-surface-temperature = Temperatura média da superfice
-unit.kelvins = [#bfbfbf]K(kelvins)[]
 stat.radius = Raio
-unit.kilometers = [#bfbfbf]mill. km[]
 stat.orbit-radius = Raio orbital
+
+unit.kelvins = [#bfbfbf]K(kelvins)[]
+unit.kilometers = [#bfbfbf]mill. km[]
