--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -3,18 +3,23 @@ mod.ol.disclaimer.title = [accent]Внимание![]
 mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]еще в разработке[].\nВы можете встретить баги и не завершенный контент. \n [red]Модификация еще не подходит для игры.[]\n Следите за дальнейшими обновлениями.
 mod.ol.ok = Ладно
 mod.ol.doNotShowItAgain = Не показывать это окно снова
+
 mod.ol.name = [#87ceeb]Omaloon[]
-mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
+mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145
 mod.ol.contributors = [#7f7f7f]Помощники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, TheEE145, Zelaux.
 mod.ol.description = [#badbeb]Первый мод, сделанный xStaBUx для Mindustry. Добавляет в основном уникальный контент.[]
 mod.ol.musics = [#7f7f7f]Музыкальное сопровождение:[] \nСкоро будет!
+
 mod.ol.subtitle1 = [#87ceeb]Хехе
 mod.ol.subtitle2 = [#87ceeb]Я живой!
 mod.ol.subtitle3 = [#87ceeb]:З
 mod.ol.subtitle4 = [#87ceeb]Сообщество!
+
 mod.ol.omaloon-settings = Omaloon
+
 setting.ol.discord = [accent]Присоединяйтесь к сообществу Omaloon в Discord![] [#87ceeb]\n\nЗдесь вы сможете: Пообщаться с разработчиками Omaloon! \n- Предложить свои идеи! \n- Пообщаться с другими \n«ценителями прекрасного»! \n- Присоединиться к разработке Omaloon!
 setting.ol.discord-join = Присоединяйтесь к сообществу Omaloon в Discord!
+
 setting.mod.ol.show.name = Скрыть окно предупреждения
 setting.mod.ol.show.description = Убирает окно предупреждения, которое появляется после запуска игры.
 
@@ -26,7 +31,7 @@ planet.ol-omaloon.details = [orange]Лучшая планета из всех.
 planet.ol-amsha.name = Амша[red][скрыто][]
 planet.ol-amsha.description = Самостоятельная звезда, являющаяся центром системы Амши.
 
-# region Items
+###Items
 
 item.ol-grumon.name = Грумон
 item.ol-grumon.description = Используется в обороне и производстве.
@@ -90,13 +95,16 @@ block.ol-freezing.description = Стреляет заряженными снар
 
 ###StusEffects
 status.ol-slime.name = Покрытый слизью
+
 ###Bars
 bar.acceleration = Разгон
 bar.liquid-capacity = Жидкости:
+
 ###Stats
 stat.magnetic = Магнитная восприимчивость
 stat.average-surface-temperature = Средняя температура поверхности
-unit.kelvins = [#bfbfbf]К(кельвин)[]
 stat.radius = Радиус
-unit.kilometers = [#bfbfbf]км³[]
 stat.orbit-radius = Радиус орбиты
+
+unit.kelvins = [#bfbfbf]К(кельвин)[]
+unit.kilometers = [#bfbfbf]км³[]
