--- a/assets/bundles/bundle_pt_BR.properties
+++ b/assets/bundles/bundle_pt_BR.properties
@@ -7,7 +7,7 @@ mod.ol.doNotShowItAgain = Não mostrar essa janela novamente.
 mod.ol.name = [#87ceeb]Omaloon[]
 
 mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145
-mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[], TheEE145, Zelaux.
+mod.ol.contributors = [#7f7f7f]Сontributors:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[][], Zelaux.
 mod.ol.description = [#badbeb]Meu primeiro mod. Adiciona principalmente conteudo único.[]
 mod.ol.musics = [#7f7f7f]Music:[] \nEm breve!
 
