--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -11,8 +11,8 @@ mod.ol.updater.later = Нагадати пізніше
 
 mod.ol.name = [#87ceeb]Omaloon[]
 
-mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[]
-mod.ol.contributors = [#7f7f7f]Співрозробники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[], TheEE145, Zelaux.
+mod.ol.author = [#fed27f]S[][#fed27f]t[][#a9aabf]a[][#7e96df]B[][#7090ea]U[], TheEE145
+mod.ol.contributors = [#7f7f7f]Співрозробники:[] \n[#735384]Dj Silin[], [#e4b400]MissionaryPoseBest[], [#3498db]SUS[], yesC48, [#008A00]Uuj[#FFFF00]uju[][], Zelaux.
 mod.ol.description = [#badbeb]Перший мод, створений xStaBUx для Mindustry. Додає переважно унікальний вміст.[]
 mod.ol.musics = [#7f7f7f]Музика:[] \nСкоро!
 
