bundle-for-new-content

--- a/assets/bundles/bundle_pt_BR.properties
+++ b/assets/bundles/bundle_pt_BR.properties
@@ -1,3 +1,4 @@
+###suppress inspection "UnusedProperty" for whole file
 ###Mod
 mod.ol.disclaimer.title = [accent]Cuidado![]
 mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]ainda em desenvolvimento[].\nVocê pode encontrar bugs e conteudo incompleto. \n [red]Enquanto o mod não é jogavel. []\n Fique de olho para mais atualizações.
@@ -15,6 +16,7 @@ mod.ol.subtitle1 = [#87ceeb]he he
 mod.ol.subtitle2 = [#87ceeb]Estou vivo!
 mod.ol.subtitle3 = [#87ceeb]:З
 mod.ol.subtitle4 = [#87ceeb]Comunidade!
+mod.ol.subtitle5 = [#87ceeb]Among the winds
 
 mod.ol.omaloon-settings = Omaloon
 
