--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -1,3 +1,4 @@
+###suppress inspection "UnusedProperty" for whole file
 ###Mod
 mod.ol.disclaimer.title = [accent]Внимание![]
 mod.ol.disclaimer.text = [accent]Omaloon-mod[] [red]еще в разработке[].\nВы можете встретить баги и не завершенный контент. \n [red]Модификация еще не подходит для игры.[]\n Следите за дальнейшими обновлениями.
@@ -14,6 +15,7 @@ mod.ol.subtitle1 = [#87ceeb]Хехе
 mod.ol.subtitle2 = [#87ceeb]Я живой!
 mod.ol.subtitle3 = [#87ceeb]:З
 mod.ol.subtitle4 = [#87ceeb]Сообщество!
+mod.ol.subtitle5 = [#87ceeb]Among the winds
 
 mod.ol.omaloon-settings = Omaloon
 
