little-little-fix

--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -102,7 +102,7 @@ block.ol-sandbox-compressor.name = Творчий компресор
 block.ol-sandbox-compressor.description = Створює тиск який потрібен для роботи деяких заводів та турелей. Можна налаштувати. 0 - режим вакууму. Тільки пісочниця.
 
 block.ol-pressure-pipe.name = Труба для тиску
-block.ol-pressure-pipe.description = Транспортує тиск.
+block.ol-pressure-pipe.description = Передає тиск.
 
 block.ol-improved-pressure-pipe.name = Покращена труба для тиску
 block.ol-improved-pressure-pipe.description = Передає тиск.
@@ -111,16 +111,16 @@ block.ol-reinforced-pressure-pipe.name = Зміцнена труба для ти
 block.ol-reinforced-pressure-pipe.description = Передає тиск.
 
 block.ol-pressure-counter.name = Лічильник
-block.ol-pressure-counter.description = Відображає тиск у системі за допомогою стрілочки. Передає тиск.
+block.ol-pressure-counter.description = Відображає тиск у системі за допомогою стрілки. Передає тиск.
 
 block.ol-improved-pressure-counter.name = Покращений лічильник
-block.ol-improved-pressure-counter.description = Відображає тиск у системі за допомогою стрілочки. Передає тиск.
+block.ol-improved-pressure-counter.description = Відображає тиск у системі за допомогою стрілки. Передає тиск.
 
 block.ol-reinforced-pressure-counter.name = Зміцнений лічильник
-block.ol-reinforced-pressure-counter.description = Відображає тиск у системі за допомогою стрілочки. Передає тиск.
+block.ol-reinforced-pressure-counter.description = Відображає тиск у системі за допомогою стрілки. Передає тиск.
 
 block.ol-pressure-junction.name = Перехрестя для тиску
-block.ol-pressure-junction.description = Діє як міст для двох перехресних напірних труб.
+block.ol-pressure-junction.description = Модифікатор труб. Діє як міст між двома перехресними трубами для тиску. Можна встановлювати лише на труби для тиску.
 
 block.ol-pressure-bridge.name = Міст для тиску
 block.ol-pressure-bridge.description = Передає тиск через будівлі або місцевість.
