--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -150,7 +150,10 @@ block.ol-hyper-receiver.name = Омалітова сонячна панель
 block.ol-hyper-receiver.description = Збирає енергію сонця. Потребує омалітової рідини.
 
 block.ol-freezing.name = Замороження
-block.ol-freezing.description = Стріляє в наземних ворогів зарядженими снарядами з омалітової рідини, заморожуючи та роблячи їх більш уразливими до вибухів. Вдосконалена система самонаведення не дає ворогам шансу втекти.
+block.ol-freezing.description = Вистрілює в наземних ворогів зарядженими снарядами з омалітової рідини, заморожуючи та роблячи їх більш уразливими до вибухів. Вдосконалена система самонаведення не дає ворогам шансу втекти.
+
+block.ol-tau.name = Тау
+block.ol-tau.description = Вистрілює енергетичними залпами в повітряних противників.
 
 ###Status effects
 status.ol-slime.name = Покритий слизом
