--- a/assets/bundles/bundle_uk_UA.properties
+++ b/assets/bundles/bundle_uk_UA.properties
@@ -40,9 +40,9 @@ setting.mod.ol.pressureupdate.possible-bugs =  тики(ів), можливі б
 setting.mod.ol.pressureupdate.ticks =  тики(ів)
 
 ###Planets
-planet.ol-omaloon.name = Омалун[red][приховано][]
+planet.ol-omaloon.name = Омалун [red][приховано][]
 
-planet.ol-amsha.name = Амша[red][приховано][]
+planet.ol-amsha.name = Амша [red][приховано][]
 
 ###Items
 item.ol-grumon.name = Грумон
@@ -144,7 +144,7 @@ block.ol-fuser.name = Розріджувач
 block.ol-fuser.description = Змішує омаліт з водою.
 
 block.ol-centrifuge.name = Омалітова центрифуга
-block.ol-centrifuge.description = Поєднує омаліт з титаном шляхом розчеплення та пресування їх у центрифузі.
+block.ol-centrifuge.description = Поєднує омаліт з титаном шляхом розчеплення та пресування їх у центрифузі. При розгоні виробляє трохи енергії.
 
 block.ol-hyper-receiver.name = Омалітова сонячна панель
 block.ol-hyper-receiver.description = Збирає енергію сонця. Потребує омалітової рідини.
