--- a/resources/assets/bundles/bundle_uk_UA.properties
+++ b/resources/assets/bundles/bundle_uk_UA.properties
@@ -8,6 +8,7 @@ mod.ol.doNotShowItAgain = Не нагадувати знову
 mod.ol.updater.tile = Знайдено нову версію!
 mod.ol.updater = Знайдено нову версію [#87ceeb]Omaloon[]! \nШвидше за все, додано новий вміст або виправлено деякі помилки. Рекомендовано встановити новішу версію. \n\n[gray]Поточна версія Omaloon v{0}, а остання v{1}[]
 mod.ol.updater.load = Встановити зараз!
+mod.ol.updater.changes = Список змін
 mod.ol.updater.later = Нагадати пізніше
 
 mod.ol.name = [#87ceeb]Omaloon[]
