dalanii-gaі-is-now-angeirum

--- a/resources/assets/bundles/bundle_uk_UA.properties
+++ b/resources/assets/bundles/bundle_uk_UA.properties
@@ -72,6 +72,10 @@ liquid.ol-dalanii.name = Даланій
 liquid.ol-dalanii.description = Використовується для виробництва предметів.
 liquid.ol-dalanii.details = Підозріло слизький.
 
+liquid.ol-angeirum.name = Ангейрум
+liquid.ol-angeirum.description = Використовується у деяких заводах і для підтримки тиску у 2-му рівні.
+liquid.ol-angeirum.details = Падає дощем на дно кратерів, змішуючись з водою та залишками "Сету". Повернути ангерум з цієї суміші вкрай важко.
+
 liquid.ol-liquid-omalite.name = Омалітова рідина
 liquid.ol-liquid-omalite.description = Використовується для охолодження.
 liquid.ol-liquid-omalite.details = Крижана рідина. Ледь холодніша за кріоген, яку також можна використовувати як охолоджувач.
